# outlook-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml  server.json
.github/workflows/: ci.yml
docs/plans/: 2026-04-12-outlook-mcp.md
src/outlook_mcp/: __init__.py  auth.py  config.py  errors.py  folder_resolver.py  graph.py  pagination.py  server.py
src/outlook_mcp/models/: contacts.py  mail.py
src/outlook_mcp/tools/: batch.py  calendar_read.py  calendar_write.py  contacts.py  mail_attachments.py  mail_drafts.py  mail_folders.py  mail_read.py  mail_thread.py  mail_triage.py  mail_write.py  todo.py
tests/: test_auth.py  test_batch.py  test_calendar_write.py  test_contacts.py  test_folder_resolver.py  test_graph.py  test_integration.py  test_mail_attachments.py  test_mail_drafts.py  test_mail_folders.py  test_mail_read.py  test_mail_thread.py  test_mail_triage.py  test_mail_write.py  test_mail_write_tier2.py  test_pagination_integration.py  test_server.py  test_todo.py
