[project]
name = "outlook-mcp"
version = "0.1.0"
description = "MCP server for Microsoft Outlook via Microsoft Graph API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michael Palermiti" }
]
keywords = ["mcp", "outlook", "microsoft-graph", "email", "calendar", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.27",
    "msgraph-sdk>=1.55",
    "azure-identity>=1.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
